# klyd

./: .gitignore  .output.txt  .pypirc  AGENTS.md  AGENTS.md.txt  LICENSE  MANIFEST.in  README.md  full_diff.txt  pyproject.toml  test.db  test_db.py  upload.py
.github/workflows/: ci.yml  publish.yml
docs/CLAUDE/: BUILDPLAN.md  CONTEXT.md  ENGINEERING_RULES.md  PROMPTING_TEMPLATE.md  TASKS.md
hooks/: post-commit.sh  pre-commit.sh
keel/: __init__.py  cli.py  config.py  db.py  extractor.py  hooks.py  injector.py
klyd/: cli.py  extractor.py
schema/: v1.sql
